# Basic-Component-design

./: README.md
3.1池式组件/3.1.1手写线程池与性能分析/: CMakeLists.txt  README.md  thread_pool.c
3.1池式组件/3.1.1手写线程池与性能分析/src/example/: thread_pool.c
3.1池式组件/3.1.1手写线程池与性能分析/src/practice/: thread_pool_hw.c
3.1池式组件/3.1.2内存池的实现与场景分析/: CMakeLists.txt  README.md
3.1池式组件/3.1.2内存池的实现与场景分析/src/example/: mmpool.c
3.1池式组件/3.1.2内存池的实现与场景分析/src/practice/: mmpool_hw.c
3.1池式组件/3.1.3异步请求池的实现/: CMakeLists.txt  README.md
3.1池式组件/3.1.3异步请求池的实现/async 代码/: async_dns_client_noblock.c  sync_dns_client-课上手写.c  sync_dns_client.c
3.1池式组件/3.1.3异步请求池的实现/src/async/: async_dns_client_noblock.c  sync_dns_client-课上手写.c
3.1池式组件/3.1.3异步请求池的实现/src/example/async 代码/: sync_dns_client.c
3.1池式组件/3.1.3异步请求池的实现/src/practice/: async_dns_client_noblock_hw.c  sync_dns_client_hw.c
3.1池式组件/3.1.4mysql连接池的实现/: CMakeLists.txt
3.1池式组件/3.1.4mysql连接池的实现/2.doc/: 作业.txt
3.1池式组件/3.1.4mysql连接池的实现/hiredis/: async.h
3.1池式组件/3.1.4mysql连接池的实现/hiredis/examples/: example-libevent.c  hi
3.1池式组件/3.1.4mysql连接池的实现/hiredis/redis-async/: README.md  adapter.h  sync
3.1池式组件/3.1.4mysql连接池的实现/redis-async/: adapter.h  async
3.1池式组件/3.1.4mysql连接池的实现/src/examlpe/redis-async/: async.c  reactor.h
3.1池式组件/3.1.4mysql连接池的实现/src/mysql_pool/: CMakeLists.txt  IMUser.cpp  IMUser.h  ZeroThreadpool.cpp  ZeroThreadpool.h  test_curd.cpp  test_dbpool.cpp
3.1池式组件/3.1.4mysql连接池的实现/src/mysql_pool_hw/: CMakeLists.txt  DBPool.cpp  DBPool.h  IMUser.cpp  ZeroThreadpool.cpp  test_curd.cpp  test_curd_hw.cpp  test_dbpool.cpp  test_dbpool_hw.cpp  win32.h
3.1池式组件/3.1.4mysql连接池的实现/src/redis-async/: sync.c
3.1池式组件/3.1.4mysql连接池的实现/src/redis-async-hw/: README.md  adapter.h  reactor.h  sync.c
3.1池式组件/3.1.4mysql连接池的实现/src/redis_pool/: README.md  hiredis.h  test_ThreadPool.cpp
3.1池式组件/3.1.4mysql连接池的实现/src/redis_pool_hw/: .gitignore  CMakeLists.txt  CachePool.cpp  CachePool.h  Thread.h  hiredis.c  test_CachePool.cpp  test_ThreadPool.cpp  threadpool.h
3.2高性能组件/3.2.1原子操作CAS与锁实现/: CMakeLists.txt  trycatch_finally.c
3.2高性能组件/3.2.1原子操作CAS与锁实现/src/example/: lock.c
3.2高性能组件/3.2.1原子操作CAS与锁实现/src/practice/: lock_hw.c  trycatch_finally_hw.c
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/: CMakeLists.txt
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers/: readme.md
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/example/minheap/: mh-timer.h  minheap.c  minheap.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/example/rbtree/: rbt-timer.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/example/skiplist/: skiplist.c  skiplist.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/example/timewheel/: spinlock.h  timewheel.c  timewheel.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/example/timewheel_single/: single_tw.c
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/practice/minheap/: mh-timer_hw.c  mh-timer_hw.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/practice/rbtree/: rbt-timer_hw.c  rbt-timer_hw.h
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/practice/skiplist/: skl-timer_hw.c
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/practice/timewheel/: tw-timer_hw.c
3.2高性能组件/3.2.2定时器方案红黑树，时间轮，最小堆/timers_src/practice/timewheel_single/: single_tw_hw.c
3.2高性能组件/3.2.3无锁消息队列实现/: CMakeLists.txt
3.2高性能组件/3.2.3无锁消息队列实现/cas_queue/: 1_test_i++.c  1_test_i++.s  3_test_mutex_spin_lock  3_test_mutex_spin_lock.cpp  atomic_ptr.hpp  yqueue.hpp
3.2高性能组件/3.2.3无锁消息队列实现/src/cas_queue/: 2_test_i++_threads  2_test_i++_threads.c  3_test_mutex_spin_lock.cpp  4_test_lock_free_queue  4_test_lock_free_queue.cpp  ArrayLockFreeQueue.h  ArrayLockFreeQueueImp.h  CMakeLists.txt  SimpleLockFreeQueue.h  atom_opt.h  atomic_ptr.hpp  ypipe.hpp  yqueue.hpp
3.2高性能组件/3.2.3无锁消息队列实现/src/cas_queue_hw/: 1_test_i++.c
3.2高性能组件/3.2.4手写死锁检测组件/: CMakeLists.txt
3.2高性能组件/3.2.4手写死锁检测组件/src/example/: deadlock_success.c  deadlock课上手写.c
3.2高性能组件/3.2.4手写死锁检测组件/src/practice/: deadlock_hw.c
3.2高性能组件/3.2.5手写内存泄漏检测组件/: CMakeLists.txt  README.md  memleak.c
3.2高性能组件/3.2.5手写内存泄漏检测组件/src/example/: memleak  memleak.c  shmem.c
3.2高性能组件/3.2.5手写内存泄漏检测组件/src/example/mem/: 0x563d466c72a0.mem
3.2高性能组件/3.2.5手写内存泄漏检测组件/src/practice/: memleak_hw.c
3.2高性能组件/3.2.6手写分布式锁/: README.md
3.3开源组件/3.3.1 libeventlibev框架/libevent-demo/: epoll.c  evmain1.c  evmain2.c
3.3开源组件/3.3.2 异步日志方案1og4cpp/log-src-20211230/muduo_log/: AsyncLogging.cc  AsyncLogging.h  Atomic.h  BlockingQueue.h  CurrentThread.h  Date.cc  Date.h  FileUtil.h  LogFile.h  LogStream.h  Logging.h  ProcessInfo.h  README.md  StringPiece.h  Thread.cc  TimeStamp.h  Timestamp.cc  Types.h  copyable.h  scoped_ptr.h
3.3开源组件/3.3.2 异步日志方案1og4cpp/log-src-20211230/src-log4cpp/: CMakeLists.txt
3.3开源组件/3.3.2 异步日志方案log4cpp/log-src-20211230/muduo_log/: CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  Exception.cc  Exception.h  FileUtil.cc  LogFile.cc  LogStream.cc  Logging.cc  Mutex.h  ProcessInfo.cc  Thread.h  TimeZone.cc  TimeZone.h  main_log_test.cc  noncopyable.h  ptr_vector.h
3.3开源组件/3.3.2 异步日志方案log4cpp/log-src-20211230/src-log4cpp/: 1-file_test.cpp  2-test_log4cpp.cpp  3-test_log4cpp copy.cpp  3-test_log4cpp.conf  3-test_log4cpp.cpp  4-RollingFileAppender.cpp  5-StringQueueAppender.cpp
